k8s-new/k8s-labs/common/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
