k8s-new/k8s-labs/common/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: lab
spec:
  selector:
    app: app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
